--- a/view/views/chat.html
+++ b/view/views/chat.html
@@ -10,8 +10,7 @@
 <div id="shade" class="shade">
     <div>
         <input class="shade_input" id="uname" placeholder="Sign your name">
-        <button class="button" id="submitUname" style="margin-left: 15px;padding: 26px 50px;
-    border-radius: 30px;" onclick="CHAT.submitUname('uname')">Submit
+        <button class="button" id="submitUname" style="margin-left: 15px;padding: 26px 50px;" onclick="CHAT.submitUname('uname')">Submit
         </button>
     </div>
 </div>
