--- a/view/style/main.css
+++ b/view/style/main.css
@@ -27,7 +27,7 @@ body{
     position: fixed;
     height: 150px;
     width: 100%;
-    background: url("../image/background.jpg") 47% 11%;
+    background-color: #e8ad49;
     text-align: center;
     color: white;
 }
@@ -102,7 +102,7 @@ body{
 }
 .input{
     background-color: white;
-    padding: 20px 20px 5px 20px;
+    padding: 20px 20px 15px 20px;
     margin-left: 30px;
     margin-top: 30px;
     width: 70%;
