--- a/view/views/chat.html
+++ b/view/views/chat.html
@@ -15,7 +15,7 @@
     </div>
 </div>
 <div class="head">
-    <p style="font-size: 60px;margin-top: 20px">一面山城</p>
+    <p style="font-size: 60px;margin-top: 20px">ChatRoom</p>
 </div>
 <div class="chat_area" id="chat_area">
     <div class="chat_content" id="chat_content">
